entity_macros/tests/ui/derive/ent/unexpected-inner-attr-for-ent-field.stderr
error: Unexpected field attribute
  --> $DIR/unexpected-inner-attr-for-ent-field.rs:17:17
   |
17 |     #[ent(field(something))]
   |                 ^^^^^^^^^
